# spice

./: .gitignore  AGENTS.md  CHANGES.md  README.md  TODO.md  dune  dune-project  dune-workspace  spice.opam
bench/: bench_diff.ml  bench_fswatch.ml  bench_path.ml  bench_session.ml  bench_session_store.ml  dune
doc/: README.md  (+1 more)
lib/fswatch/: dune  spice_fswatch.ml  spice_fswatch.mli  spice_fswatch_clock_stubs.c  spice_fswatch_fsevents_stubs.c  spice_fswatch_inotify_stubs.c
lib/host/: account.ml  account.mli  artifacts.ml  artifacts.mli  compaction_run.ml  compaction_run.mli  compactor.ml  compactor.mli  config.ml  config.mli  config_home.ml  config_home.mli  context.ml  context.mli  dune  env.ml  env.mli  goal_run.ml  goal_run.mli  handler.ml  handler.mli  host.ml  host.mli  jobs.ml  jobs.mli  live.ml  live.mli  models.ml  models.mli  mutation_attribution.ml  mutation_attribution.mli  mutations.ml  mutations.mli  notice_queue.ml  notice_queue.mli  permission.ml  permission.mli  producers.ml  producers.mli  reason.ml  (+29 more)
lib/host/builtin/: dune  login.ml  login.mli  spice_host_builtin.ml  spice_host_builtin.mli
lib/tools/: anchor.ml  anchor.mli  anchor_tracker.ml  anchor_tracker.mli  apply_patch.ml  apply_patch.mli  change_evidence.ml  command_permission.ml  dune  edit_error.ml  edit_file.ml  edit_file.mli  edit_lines.ml  edit_lines.mli  fs_error.ml  glob.ml  glob.mli  import.ml  ocaml_ast_edit.ml  ocaml_ast_edit.mli  ocaml_docs.ml  ocaml_docs.mli  ocaml_dune_describe.ml  ocaml_dune_describe.mli  ocaml_dune_diagnostics.ml  ocaml_dune_diagnostics.mli  ocaml_eval.ml  ocaml_eval.mli  ocaml_find_definitions.ml  ocaml_find_definitions.mli  ocaml_find_references.ml  ocaml_find_references.mli  ocaml_merlin.ml  ocaml_merlin.mli  ocaml_position.ml  ocaml_position.mli  ocaml_rename.ml  ocaml_rename.mli  ocaml_replace_expressions.ml  ocaml_replace_expressions.mli  (+28 more)
lib/tui/: app.ml  app.mli  auth_panel.ml  auth_panel.mli  banner.ml  banner.mli  command.ml  command.mli  completion_list.ml  completion_list.mli  composer.ml  composer.mli  dialog.ml  dialog.mli  draft.ml  draft.mli  dune  footer.ml  footer.mli  goodbye.ml  goodbye.mli  help.ml  help.mli  history.ml  history.mli  home.ml  home.mli  inline_input.ml  inline_input.mli  mention.ml  mention.mli  model_panel.ml  model_panel.mli  notice.ml  notice.mli  option_list.ml  option_list.mli  palette.ml  palette.mli  pane.ml  (+57 more)
lib/tui/review/: dune  review_compose.ml  review_compose.mli  review_diff.ml  review_diff.mli  review_panel.ml  review_panel.mli  review_rows.ml  review_rows.mli  spice_tui_review.ml  spice_tui_review.mli  style.ml  style.mli
test/blackbox/: dune  setup-script.sh
test/blackbox/test-cases/: dune
test/blackbox/test-cases/auth/: browser.t  errors.t  login-checked.t  login-hints.t  logout-revoke.t  oauth-route.t  oauth.t  precedence.t  readiness.t  refresh.t  status.t  store.t
test/expect/: dune  test_diff_expect.ml  test_tools_catalog_expect.ml  test_tools_edit_apply_expect.ml  test_tools_glob_expect.ml  test_tools_ocaml_ast_edit_expect.ml  test_tools_ocaml_docs_expect.ml  test_tools_ocaml_dune_expect.ml  test_tools_ocaml_eval_expect.ml  test_tools_ocaml_find_definitions_expect.ml  test_tools_ocaml_find_references_expect.ml  test_tools_ocaml_rename_expect.ml  test_tools_ocaml_replace_expressions_expect.ml  test_tools_ocaml_search_expressions_expect.ml  test_tools_ocaml_type_at_expect.ml  test_tools_read_file_expect.ml  test_tools_search_text_expect.ml  test_tools_shell_expect.ml  test_tools_shell_expect.ml.corrected  test_tools_web_expect.ml  test_tools_write_file_expect.ml
test/process/: dune  test_process.ml
test/promptgen/: bad-name.expected  dune  duplicate-description.expected  duplicate.expected  good.expected  missing-description.expected  multiline-description.expected  nested.expected  unterminated.expected
test/tui/: dune  test_auth.ml  test_commands.ml  test_composer.ml  test_dialogs.ml  test_exit.ml  test_geometry.ml  test_history.ml  test_home.ml  test_home_live.ml  test_input.ml  test_mention.ml  test_model_panel.ml  test_notices.ml  test_resume.ml  test_review.ml  test_session.ml  test_sessions_panel.ml  test_sessions_screen.ml  test_settings.ml  test_settlement.ml  test_side_pane.ml  test_states.ml  test_strip.ml  test_threads.ml  test_todo_board.ml  test_tools.ml  test_transcript.ml  test_turn.ml  test_turn_errors.ml
test/tui-next/: dune  test_auth.ml  test_commands.ml  test_composer.ml  test_dialogs.ml  test_geometry.ml  test_history.ml  test_home.ml  test_input.ml  test_mention.ml  test_model_panel.ml  test_review.ml  test_session.ml  test_settings.ml  test_side_pane.ml  test_states.ml  test_strip.ml  test_threads.ml  test_todo_board.ml  test_tools.ml  test_transcript.ml  test_turn.ml  test_turn_errors.ml
test/tui-next/harness/: docs.ml  dune  project.ml  provider.ml  screen.ml  seed.ml  tui.ml  util.ml
test/tui/harness/: docs.ml  dune  key.ml  key.mli  project.ml  project.mli  provider.ml  provider_process.ml  provider_process.mli  provider_runtime.ml  provider_script.ml  provider_script.mli  pty_session.ml  pty_session.mli  screen.ml  screen.mli  seed.ml  term.ml  tui.ml  tui.mli  tui_harness.ml  tui_harness.mli  util.ml
test/tui/pty/: dune  test_cli_launch.ml  test_dune_live.ml  test_goodbye.ml  test_terminal.ml  test_trust_prompt.ml
test/unit/: dune  llm_test_server.ml  test_account.ml  test_auth.ml  test_cr.ml  test_diagnostic.ml  test_diff.ml  test_digest.ml  test_edit.ml  test_frontmatter.ml  test_fswatch.ml  test_host_account.ml  test_host_artifacts.ml  test_host_permission.ml  test_host_session.ml  test_llm.ml  test_llm_anthropic.ml  test_llm_artifact.ml  test_llm_deepseek.ml  test_llm_google.ml  test_llm_local.ml  test_llm_ollama.ml  test_llm_openai.ml  test_modelfit.ml  test_mutation.ml  test_notice.ml  test_oauth2.ml  test_oauth2_eio.ml  test_ocaml.ml  test_ocaml_dune.ml  test_ocaml_grep.ml  test_ocaml_toolchain.ml  test_patch.ml  test_path.ml  test_permission.ml  test_permission_transaction.ml  test_protocol.ml  test_provider.ml  test_provider_builtin.ml  test_review.ml  (+13 more)
(+593 files in other folders)
