(executable
 (name bench_path)
 (modules bench_path)
 (libraries spice_path))

(executable
 (name bench_diff)
 (modules bench_diff)
 (libraries spice_diff))

(executable
 (name bench_session)
 (modules bench_session)
 (libraries
  jsont
  spice_llm
  spice_path
  spice_permission
  spice_session
  spice_session_run))

(rule
 (alias bench)
 (action
  (progn
   (run ./bench_path.exe)
   (run ./bench_diff.exe)
   (run ./bench_session.exe))))
