(library
 (name spice_host)
 (private_modules
  compaction_run
  producers
  session_loop
  token_heuristic
  watchers)
 (libraries
  cohttp-eio
  eio
  eio.unix
  jsont
  jsont.bytesrw
  logs
  spice_account
  spice_cr
  spice_diagnostic
  spice_diff
  spice_digest
  spice_edit
  spice_fswatch
  spice_frontmatter
  spice_llm
  spice_ocaml
  spice_ocaml_dune
  spice_path
  spice_permission
  spice_prompts
  spice_protocol
  spice_provider
  spice_sandbox
  spice_session
  spice_session_run
  spice_session_store
  spice_mutation
  spice_tools
  spice_tool
  spice_workspace
  spice_workspace_fs
  unix
  uri))
