(library
 (name spice_tools)
 (modules
  anchor
  anchor_tracker
  apply_patch
  change_evidence
  edit_error
  edit_file
  edit_lines
  fs_error
  glob
  import
  ocaml_merlin
  ocaml_ast_edit
  ocaml_eval
  ocaml_rename
  ocaml_dune_describe
  ocaml_dune_diagnostics
  ocaml_docs
  ocaml_find_definitions
  ocaml_find_references
  ocaml_position
  ocaml_replace_expressions
  ocaml_search_expressions
  ocaml_type_at
  pagination
  process
  read_file
  receipt
  search_text
  shell
  spice_tools
  text_helpers
  web
  web_fetch
  web_search
  write_file)
 (private_modules
  ocaml_position
  pagination
  process
  text_helpers
  import
  change_evidence
  edit_error
  fs_error)
 (libraries
  cohttp
  cohttp-eio
  compiler-libs.common
  cstruct
  eio
  eio.unix
  jsont
  jsont.bytesrw
  logs
  mtime
  optint
  spice_diff
  spice_edit
  spice_permission
  spice_prompts
  spice_digest
  spice_patch
  spice_path
  spice_sandbox
  spice_tool
  spice_ocaml
  spice_ocaml_toolchain
  spice_ocaml_dune
  spice_ocaml_grep
  spice_workspace
  spice_workspace_fs
  uri
  unix))
