(library
 (name spice_tui)
 (modules
  spice_tui
  app
  auth_panel
  banner
  command
  completion_list
  composer
  dialog
  draft
  footer
  goodbye
  help
  history
  home
  mention
  model_panel
  notice
  option_list
  palette
  pane
  pane_sections
  panel
  path_display
  permission_dialog
  plan_dialog
  prims
  prose
  question_dialog
  runtime
  screen
  scrollport
  sessions_panel
  sessions_screen
  settings_facts
  settings_screen
  snapshot
  strip
  theme
  thread_view
  threads_strip
  todo_board
  tool_block
  tool_distill
  transcript
  turn
  workspace_glance)
 (private_modules
  app
  auth_panel
  banner
  command
  completion_list
  composer
  dialog
  draft
  footer
  goodbye
  help
  history
  home
  mention
  model_panel
  notice
  option_list
  palette
  pane
  pane_sections
  panel
  path_display
  permission_dialog
  plan_dialog
  prims
  prose
  question_dialog
  runtime
  screen
  scrollport
  sessions_panel
  sessions_screen
  settings_facts
  settings_screen
  snapshot
  strip
  theme
  thread_view
  threads_strip
  todo_board
  tool_block
  tool_distill
  transcript
  turn
  workspace_glance)
 (libraries
  dune-build-info
  eio
  eio.unix
  jsont
  jsont.bytesrw
  matrix
  matrix-eio
  mosaic
  mosaic.ui
  spice_account
  spice_auth
  spice_cr
  spice_diagnostic
  spice_diff
  spice_edit
  spice_fswatch
  spice_host
  spice_host_builtin
  spice_llm
  spice_mutation
  spice_ocaml
  spice_ocaml_dune
  spice_path
  spice_permission
  spice_prompts
  spice_protocol
  spice_provider
  spice_review
  spice_review_git
  spice_tui_review
  spice_session
  spice_session_store
  spice_tool
  spice_tools
  spice_workspace
  spice_workspace_fs
  tree-sitter.json
  tree-sitter.ocaml
  unix
  uri))
