(rule
 (alias runtest)
 (deps setup-script.sh)
 (action
  (run %{bin:bash} -n %{deps})))

(rule
 (alias runtest)
 (enabled_if %{bin-available:shellcheck})
 (deps setup-script.sh)
 (action
  (run %{bin:shellcheck} -s bash %{deps})))

(rule
 (alias runtest)
 (enabled_if %{bin-available:rg})
 (deps
  %{bin:rg}
  (source_tree test-cases))
 (action
  (system
   "rg -L --files-without-match '^\\S' --glob \"*.t\" test-cases; [ $? -eq 1 ]")))
