; The deterministic in-process TUI suite: the real application runs under a
; headless matrix.test backend with a virtual clock — no pty or terminal
; subprocess. Tools may still spawn real subprocesses, and the harness uses
; short scheduler breaths for real IO. Each feature is its own executable and
; runtest rule so dune runs the suite in parallel.

(executables
 (names test_home test_turn test_composer test_history test_mention test_auth
   test_geometry test_dialogs test_tools test_turn_errors test_input
   test_session test_states test_commands test_model_panel test_settings
   test_transcript test_threads test_todo_board test_strip test_side_pane
   test_review)
 (modules test_home test_turn test_composer test_history test_mention test_auth
   test_geometry test_dialogs test_tools test_turn_errors test_input
   test_session test_states test_commands test_model_panel test_settings
   test_transcript test_threads test_todo_board test_strip test_side_pane
   test_review)
 (libraries unix windtrap tui_harness)
 (preprocess
  (pps ppx_windtrap)))

(executable
 (name test_settlement)
 (modules test_settlement)
 (libraries
  unix
  windtrap
  tui_harness
  eio
  eio_main
  jsont
  spice_host
  spice_host_builtin
  spice_llm
  spice_path
  spice_protocol
  spice_session
  spice_session_store
  spice_workspace)
 (preprocess
  (pps ppx_windtrap)))

(rule
 (alias runtest)
 (deps test_home.exe)
 (action
  (progn
   (run ./test_home.exe)
   (diff? test_home.ml test_home.ml.corrected))))

(rule
 (alias runtest)
 (deps test_turn.exe)
 (action
  (progn
   (run ./test_turn.exe)
   (diff? test_turn.ml test_turn.ml.corrected))))

(rule
 (alias runtest)
 (deps test_settlement.exe)
 (action
  (progn
   (run ./test_settlement.exe)
   (diff? test_settlement.ml test_settlement.ml.corrected))))

(rule
 (alias runtest)
 (deps test_composer.exe)
 (action
  (progn
   (run ./test_composer.exe)
   (diff? test_composer.ml test_composer.ml.corrected))))

(rule
 (alias runtest)
 (deps test_history.exe)
 (action
  (progn
   (run ./test_history.exe)
   (diff? test_history.ml test_history.ml.corrected))))

(rule
 (alias runtest)
 (deps test_mention.exe)
 (action
  (progn
   (run ./test_mention.exe)
   (diff? test_mention.ml test_mention.ml.corrected))))

(rule
 (alias runtest)
 (deps test_auth.exe)
 (action
  (progn
   (run ./test_auth.exe)
   (diff? test_auth.ml test_auth.ml.corrected))))

(rule
 (alias runtest)
 (deps test_geometry.exe)
 (action
  (progn
   (run ./test_geometry.exe)
   (diff? test_geometry.ml test_geometry.ml.corrected))))

(rule
 (alias runtest)
 (deps test_dialogs.exe)
 (action
  (progn
   (run ./test_dialogs.exe)
   (diff? test_dialogs.ml test_dialogs.ml.corrected))))

(rule
 (alias runtest)
 (deps test_tools.exe)
 (action
  (progn
   (run ./test_tools.exe)
   (diff? test_tools.ml test_tools.ml.corrected))))

(rule
 (alias runtest)
 (deps test_turn_errors.exe)
 (action
  (progn
   (run ./test_turn_errors.exe)
   (diff? test_turn_errors.ml test_turn_errors.ml.corrected))))

(rule
 (alias runtest)
 (deps test_input.exe)
 (action
  (progn
   (run ./test_input.exe)
   (diff? test_input.ml test_input.ml.corrected))))

(rule
 (alias runtest)
 (deps test_states.exe)
 (action
  (progn
   (run ./test_states.exe)
   (diff? test_states.ml test_states.ml.corrected))))

(rule
 (alias runtest)
 (deps test_session.exe)
 (action
  (progn
   (run ./test_session.exe)
   (diff? test_session.ml test_session.ml.corrected))))

(rule
 (alias runtest)
 (deps test_commands.exe)
 (action
  (progn
   (run ./test_commands.exe)
   (diff? test_commands.ml test_commands.ml.corrected))))

(rule
 (alias runtest)
 (deps test_model_panel.exe)
 (action
  (progn
   (run ./test_model_panel.exe)
   (diff? test_model_panel.ml test_model_panel.ml.corrected))))

(rule
 (alias runtest)
 (deps test_settings.exe)
 (action
  (progn
   (run ./test_settings.exe)
   (diff? test_settings.ml test_settings.ml.corrected))))

(rule
 (alias runtest)
 (deps test_transcript.exe)
 (action
  (progn
   (run ./test_transcript.exe)
   (diff? test_transcript.ml test_transcript.ml.corrected))))

(rule
 (alias runtest)
 (deps test_threads.exe)
 (action
  (progn
   (run ./test_threads.exe)
   (diff? test_threads.ml test_threads.ml.corrected))))

(rule
 (alias runtest)
 (deps test_todo_board.exe)
 (action
  (progn
   (run ./test_todo_board.exe)
   (diff? test_todo_board.ml test_todo_board.ml.corrected))))

(rule
 (alias runtest)
 (deps test_strip.exe)
 (action
  (progn
   (run ./test_strip.exe)
   (diff? test_strip.ml test_strip.ml.corrected))))

(rule
 (alias runtest)
 (deps test_side_pane.exe)
 (action
  (progn
   (run ./test_side_pane.exe)
   (diff? test_side_pane.ml test_side_pane.ml.corrected))))

(rule
 (alias runtest)
 (deps test_review.exe)
 (action
  (progn
   (run ./test_review.exe)
   (diff? test_review.ml test_review.ml.corrected))))
